# stewards_enquiry

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  fixtures  pyproject.toml  schemas
agentcore/: agentcore.json  aws-targets.json
agentcore/.cli/: deployed-state.json
agentcore/cdk/: package-lock.json
app/stewards_enquiry/: main.py  prompts.py  pyproject.toml  telemetry.py  triage.py  verdict.py
app/stewards_enquiry/fixtures/: cloudtrail_events.json  ip_reputation.json
app/stewards_enquiry/schemas/: verdict.schema.json
app/stewards_enquiry/tools/: __init__.py  _shared.py  get_finding.py  lookup_ip.py  propose_containment.py  query_cloudtrail.py
docs/: DEMO.md  DEVIATIONS.md  EXECUTION-ROLE.md  trace-ssh-bruteforce.json
fixtures/findings/: crypto-mining.json  ssh-bruteforce.json  tor-recon.json
scripts/: e2e_remote.sh  record_goldens.py  verify_readonly.sh
tests/: test_deployable_layout.py  test_entrypoint.py  test_get_finding.py  test_golden_verdicts.py  test_lookup_ip.py  test_propose_containment.py  test_query_cloudtrail.py  test_readonly_guard.py  test_tool_logging.py  test_triage.py  test_verdict.py
tests/golden/: crypto-mining.verdict.json  ssh-bruteforce.verdict.json  tor-recon.verdict.json
