[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stewards-enquiry"
version = "0.1.0"
description = "Security-alert triage agent on Amazon Bedrock AgentCore — proposes, never acts"
requires-python = ">=3.12"
dependencies = [
    "aws-opentelemetry-distro",
    "bedrock-agentcore>=1.9.1",
    "botocore[crt]>=1.35.0",
    "jsonschema>=4.23",
    "strands-agents>=1.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
